--- a/style.css
+++ b/style.css
@@ -6,3 +6,40 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
+.Team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 30rem;
+  }
+.Team .identity {
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .Team img {
+    max-width: 200px;
+  }
+  .versus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .versus h1 {
+    font-family: againtsregular, oswald, sans-serif;
+    font-size: 500%;
+    color: #fc0;
+    text-shadow: 2px 2px 0 black;
+  }
+  .Arena{
+    text-align: center;
+    font-family: againtsregular, oswald, sans-serif;
+    font-size: 250%;
+    color: #fc0;
+    text-shadow: 2px 2px 0 black;
+  }
